--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "antd": "^5.8.5",
     "axios": "^1.5.0",
     "i18next": "^23.2.3",
-    "react-i18next": "^13.0.1"
+    "react-i18next": "^13.0.1",
+    "@douyinfe/semi-icons": "^2.37.0",
+    "@douyinfe/semi-ui": "^2.37.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
